--- a/web/app/views/feeds/_filter.html.erb
+++ b/web/app/views/feeds/_filter.html.erb
@@ -1,41 +1,43 @@
 <%
 
-  raise ArgumentError unless data
+	raise ArgumentError unless data
 
-  data = {
-      initial_filters:              nil,
-      type:                         nil,
-      filters_that_exist_in_events: [],
-      params_filters:               []
-  }.deep_merge!(data)
+	data = {
+			type:    nil,
+			filters: []
+	}.deep_merge!(data)
 
 %>
 
-<div class="me-chip-set__wrapper">
-  <div data-controller="filter"
-       data-filter-default-value="<%= data[:initial_filters].to_json %>"
-       data-filter-type="filter"
-       data-target="filter.chipset section.<%= data[:type] %>"
-       class="me-chip-set <%= (['kinds'].include?(data[:type])) ? 'me-chip-set--small' : nil %> mdc-chip-set mdc-chip-set--<%= variant ||= 'choice' %>">
-    <% Array(data[:filters_that_exist_in_events]).each do |filter| %>
-      <% if data[:type] == 'ocurrences' %>
-        <div data-target="filter.chip" data-action="click->filter#select" data-filter-value="<%= filter['string'] %>"
-             class="me-chip mdc-chip <%= data[:params_filters] and filter_exist_in_ocurrences?(data[:params_filters], filter['string']) ? 'mdc-chip--selected' : nil %>"
-             data-turbolinks-scroll="false">
-          <div class="mdc-chip__text">
-            <%= filter['decorator'] %>
-          </div>
-        </div>
-      <% else %>
-        <div data-target="filter.chip" data-action="click->filter#select" data-filter-value="<%= filter %>"
-             class="me-chip mdc-chip <%= data[:params_filters].try(:to_s) and data[:params_filters].include?(filter) ? 'mdc-chip--selected' : nil %>"
-             data-turbolinks-scroll="false">
-
-          <div class="mdc-chip__text">
-            <%= filter %>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
-</div>
+<% if data[:filters].present? %>
+	<div class="me-chip-set__wrapper">
+		<div data-controller="filter"
+				 data-target="filter.chipset"
+				 data-filter-type="<%= data[:type] %>"
+				 class="me-chip-set mdc-chip-set mdc-chip-set--choice">
+			<% Array(data[:filters]).each do |filter| %>
+				<% if data[:type] == 'days' %>
+					<div class="me-chip mdc-chip"
+							 data-action="click->filter#select"
+							 data-filter-value="<%= filter['string'] %>"
+							 data-target="filter.chip"
+							 data-turbolinks-scroll="false">
+						<div class="mdc-chip__text">
+							<%= filter['decorator'] %>
+						</div>
+					</div>
+				<% else %>
+					<div class="me-chip mdc-chip"
+							 data-action="click->filter#select"
+							 data-filter-value="<%= filter %>"
+							 data-target="filter.chip"
+							 data-turbolinks-scroll="false">
+						<div class="mdc-chip__text">
+							<%= filter %>
+						</div>
+					</div>
+				<% end %>
+			<% end %>
+		</div>
+	</div>
+<% end %>
