--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -25,23 +25,10 @@
 	<% if current_user && @swipable_items.size > 0 && (current_user&.swipable.dig('events', 'last_view_at').blank? || current_user&.swipable.dig('events', 'last_view_at').try { |last_view_at| last_view_at < (DateTime.now - 8.hours) }) %>
 		<div class="me-section <%= 'me-section--without-padding' if current_user&.swipable.dig('events', 'last_view_at').blank? %>">
 			<div class="me-section__inner">
-				<!-- <div class="me-section__title">
-					Você iria neste evento?
-				</div> -->
 				<%= render partial: 'components/swipable/swipable' %>
 			</div>
 		</div>
 	<% end %>
-
-	<div counter>
-		<a href="#"
-			 data-reflex="click->CounterReflex#increment"
-			 data-reflex-root="[counter]"
-			 data-step="1"
-			 data-count="<%= @count.to_i %>"
-		>Increment <%= @count.to_i %>
-		</a>
-	</div>
 
 	<% if current_user && @new_events_today.size > 0 %>
 		<div class="me-section me-section--condensed">
@@ -59,279 +46,108 @@
 		</div>
 	<% end %>
 
-	<!-- <div class="me-section">
-    <div class="me-section__inner">
-      <div class="me-section__title">
-        Seguindo
-      </div>
-      <%#= render partial: "components/user_suggestions", locals: {
-          data: {
-              following_users: @following_users
-          }
-      } %>
-    </div>
-  </div> -->
-
-
 	<% if current_user %>
 		<section class="me-section me-section--condensed">
 			<div class="me-section__inner">
 				<%= render partial: 'saves',
 									 locals:  {
 											 identifier:      'events_saved',
-											 saved_resources: @favorited_events,
+											 saved_resources: @saved_events,
 											 empty_message:   "Salve eventos com ❤ para vê - los aqui"
 									 } %>
 			</div>
 		</section>
 	<% end %>
 
-	<section class="me-section">
-		<div class="me-section__inner">
-			<%# if @items.dig(:week, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-			<%= render partial: "components/collection/events/collection", locals: {
-					data:  {
-							identifier:  'this-week',
-							collection:  @items[:week],
-							title:       {
-									principal: "Acontecendo esta semana",
-									tertiary:  (current_user ? "Com base no seu perfil" : "Crie uma conta para ver os eventos abaixo")
-							},
-							type:        :large,
-							filters:     {
-									categories: false,
-									kinds:      false,
-									ocurrences: false
-							},
-							info:        {
-									assert: true,
-									text:   'Descubra seu perfil para ver os eventos da semana sugeridos'
-							},
-							continue_to: '/porto-alegre/eventos/semana',
-							origin:      :feed
-					},
-					props: {
-							disposition:     :horizontal,
-							infinite_scroll: true
-					}
-			} %>
-			<%# end %>
-		</div>
-	</section>
+	<%= render partial: "components/collection/events/collection", layout: "components/section", locals: {
+			collection: @collection_week
+	} %>
 
+	<%= render partial: "components/collection/events/collection", layout: "components/section", locals: {
+			collection: @collection_new_today
+	} %>
 
-	<%# if current_user && current_user&.personas_assortment_finished? %>
-	<% if @items.dig(:new_today, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-		<section class="me-section">
-			<div class="me-section__inner">
-				<%= render partial: "components/collection/events/collection", locals: {
-						data:  {
-								identifier:  'new-today',
-								collection:  @items[:new_today],
-								title:       {
-										principal: "Adicionados recentemente",
-										tertiary:  (current_user ? "Com base no seu perfil" : "Crie uma conta para ver os eventos abaixo")
-								},
-								type:        :large,
-								filters:     {
-										categories: false,
-										kinds:      false,
-										ocurrences: false
-								},
-								info:        {
-										assert: true,
-										text:   'Descubra seu perfil para ver eventos recém adicionados'
-								},
-								continue_to: "/#{current_user&.slug}/novos",
-								origin:      :feed
-						},
-						props: {
-								disposition: :horizontal
-						}
-				} %>
-			</div>
-		</section>
-	<% end %>
+	<%= render partial: "components/collection/events/collection",
+						 layout:  "components/section",
+						 locals:  {
+								 collection: @collection_suggestions
+						 } %>
 
-	<%# if current_user && @items.dig(:user_suggestions, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-	<section class="me-section">
-		<div class="me-section__inner">
-			<%= render partial: "components/collection/events/collection", locals: {
-					data:  {
-							identifier:  'user-suggestions',
-							collection:  @items[:user_suggestions],
-							title:       {
-									principal: "Escolhidos a dedo para #{current_user&.first_name || 'você'}",
-									# secondary: "Explore os eventos com alta recomendação para seu gosto pessoal",
-									tertiary: (current_user ? "Com base nos eventos salvos" : "Crie uma conta para ver os eventos abaixo")
-							},
-							type:        :large,
-							filters:     {
-									categories: false,
-									kinds:      false,
-									ocurrences: false
-							},
-							info:        {
-									assert: true,
-									text:   'Salve eventos com ❤ para receber sugestões com base no seu gosto'
-							},
-							detail:      @items[:user_suggestions][:detail],
-							origin:      :feed,
-							continue_to: "/#{current_user&.slug}/sugestoes"
-					},
-					props: {
-							disposition: :horizontal
-					}
-			} %>
-		</div>
-	</section>
-	<%# end %>
-
-	<section class="me-section">
-		<div class="me-section__inner">
-			<%# if current_user && @items.dig(:follow, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-			<% follow_topics_custom = capture do %>
-				<% if current_user %>
-					<div class="me-chip-set__wrapper">
-						<div class="me-chip-set mdc-chip-set">
-							<% current_user&.following_topics.filter { |topic| topic.events.active.size > 0 }.sort_by { |topic| topic.events.active.size }.reverse!.each do |topic| %>
-								<a onclick="window.AnimateModule.animatePageHide()" href="<%= link_to_topic topic %>" class="me-chip mdc-chip <%= 'new' if topic.events.active.any? { |event| current_user&.last_sign_in_at < event.created_at } %>">
-									<div class="mdc-chip__ripple"></div>
-									<%= topic.details_name.titleize %>
-									<% if topic.events.active.size > 0 %>
-										<i class="me-chip__counter"><%= topic.events.active.size %></i>
-									<% end %>
-								</a>
+	<% custom_title = capture do %>
+		<% if current_user %>
+			<div class="me-chip-set__wrapper">
+				<div class="me-chip-set mdc-chip-set">
+					<% current_user&.following_topics.filter { |topic| topic.events.active.size > 0 }.sort_by { |topic| topic.events.active.size }.reverse!.each do |topic| %>
+						<a onclick="window.AnimateModule.animatePageHide()" href="<%= link_to_topic topic %>" class="me-chip mdc-chip <%= 'new' if topic.events.active.any? { |event| current_user&.last_sign_in_at < event.created_at } %>">
+							<div class="mdc-chip__ripple"></div>
+							<%= topic.details_name.titleize %>
+							<% if topic.events.active.size > 0 %>
+								<i class="me-chip__counter"><%= topic.events.active.size %></i>
 							<% end %>
-						</div>
-					</div>
-				<% end %>
-			<% end %>
-			<%= render partial: "components/collection/events/collection", locals: {
-					data:  {
-							identifier:  'follow',
-							collection:  @items[:follow],
-							title:       {
-									principal: "Tópicos que você segue",
-									tertiary:  (current_user ? nil : "Crie uma conta para ver os eventos abaixo"),
-									custom:    follow_topics_custom
-							},
-							type:        :large,
-							filters:     {
-									categories: false,
-									kinds:      false,
-									ocurrences: false
-							},
-							info:        {
-									assert: true,
-									text:   'Siga locais e organizadores para ver seus eventos aqui'
-							},
-							detail:      @items[:follow][:detail],
-							origin:      :feed,
-							continue_to: "/#{current_user&.slug}/seguindo"
-
-					},
-					props: {
-							disposition: :horizontal
-					}
-			} %>
-			<%# end %>
-		</div>
-	</section>
-
-
-	<section class="me-section">
-		<div class="me-section__inner">
-			<% follow_users_custom = capture do %>
-				<div class="me-user-suggestions">
-					<div class="me-user-suggestions__inner">
-						<% User.following_users(current_user).each do |user| %>
-							<%= link_to user_path user do %>
-								<div onclick="window.AnimateModule.animatePageHide()" class="me-user-suggestions__user">
-									<div class="me-user-suggestions__picture" style="background-image: url('<%= user.picture %>')">
-									</div>
-									<div class="me-user-suggestions__name">
-										<%= user.first_name %>
-									</div>
-								</div>
-							<% end %>
-						<% end %>
-					</div>
-				</div>
-			<% end %>
-			<%= render partial: "components/collection/events/collection", locals: {
-					data:  {
-							identifier: 'following-users',
-							collection: @items[:following_users],
-							title:      {
-									principal: "Pessoas que você segue",
-									tertiary:  (current_user ? nil : "Crie uma conta para ver os eventos abaixo"),
-									custom:    follow_users_custom
-							},
-							type:       :large,
-							filters:    {
-									categories: false,
-									kinds:      false,
-									ocurrences: false
-							},
-							info:       {
-									assert: true,
-									text:   'Siga pessoas para ver seus eventos aqui'
-							},
-							detail:     @items[:following_users][:detail],
-							origin:     :feed,
-							#continue_to: "/#{current_user&.slug}/sugestoes"
-					},
-					props: {
-							disposition: :horizontal
-					}
-			} %>
-		</div>
-	</section>
-
-
-	<% neighborhoods_custom = capture do %>
-		<div class="me-chip-set__wrapper">
-			<div class="me-chip-set mdc-chip-set mdc-chip-set--choice">
-				<% ['Cidade Baixa', 'Centro Histórico', 'Bom Fim', 'Moinhos de Vento'].each do |neighborhood| %>
-					<%= link_to neighborhood_events_path(neighborhood.parameterize), onclick: "window.AnimateModule.animatePageHide()", class: "me-chip mdc-chip #{'mdc-chip--selected' if neighborhood == 'Cidade Baixa'}" do %>
-						<div class="mdc-chip__ripple"></div>
-						<%= neighborhood.titleize %>
+						</a>
 					<% end %>
-				<% end %>
+				</div>
 			</div>
-		</div>
+		<% end %>
 	<% end %>
-	<section class="me-section">
-		<div class="me-section__inner">
-			<%= render partial: "components/collection/events/collection", locals: {
-					data:  {
-							identifier: 'my-neighborhood',
-							collection: @items[:neighborhood],
-							title:      {
-									principal: "Nos bairros da sua cidade",
-									tertiary:  (current_user ? nil : "Crie uma conta para ver os eventos abaixo"),
-									custom:    neighborhoods_custom
-							},
-							type:       :large,
-							filters:    {
-									categories: false,
-									kinds:      false,
-									ocurrences: false
-							},
-							info:       {
-									assert: true,
-									text:   nil
-							},
-							detail:     @items[:neighborhood][:detail],
-							origin:     :feed
-					},
-					props: {
-							disposition: :horizontal
-					}
-			} %>
-		</div>
-	</section>
+	<%= render partial: "components/collection/events/collection",
+						 layout:  "components/section",
+						 locals:  {
+								 collection: @collection_follow.deep_merge!(
+										 custom_title: custom_title
+								 )
+						 } %>
+
+	<% custom_title = capture do %>
+		<% if current_user %>
+			<div class="me-user-suggestions">
+				<div class="me-user-suggestions__inner">
+					<% User.following_users(current_user).each do |user| %>
+						<%= link_to user_path user do %>
+							<div onclick="window.AnimateModule.animatePageHide()" class="me-user-suggestions__user">
+								<div class="me-user-suggestions__picture" style="background-image: url('<%= user.picture %>')">
+								</div>
+								<div class="me-user-suggestions__name">
+									<%= user.first_name %>
+								</div>
+							</div>
+						<% end %>
+					<% end %>
+				</div>
+			</div>
+		<% end %>
+	<% end %>
+	<%= render partial: "components/collection/events/collection",
+						 layout:  "components/section",
+						 locals:  {
+								 collection: @collection_following_users.deep_merge!(
+										 custom_title: custom_title
+								 )
+						 } %>
+
+	<% custom_title = capture do %>
+		<% if current_user %>
+			<div class="me-chip-set__wrapper">
+				<div class="me-chip-set mdc-chip-set mdc-chip-set--choice">
+					<% ['Cidade Baixa', 'Centro Histórico', 'Bom Fim', 'Moinhos de Vento'].each do |neighborhood| %>
+						<%= link_to neighborhood_events_path(neighborhood.parameterize), onclick: "window.AnimateModule.animatePageHide()", class: "me-chip mdc-chip #{'mdc-chip--selected' if neighborhood == 'Cidade Baixa'}" do %>
+							<div class="mdc-chip__ripple"></div>
+							<%= neighborhood.titleize %>
+						<% end %>
+					<% end %>
+				</div>
+			</div>
+		<% end %>
+	<% end %>
+	<%= render partial: "components/collection/events/collection",
+						 layout:  "components/section",
+						 locals:  {
+								 collection: @collection_neighborhood.deep_merge!(
+										 custom_title: custom_title
+								 )
+						 } %>
+
+
 
 	<% if mobile_device? %>
 		<div data-controller="button" data-target="button.button" class="me-button mdc-button mdc-button--raised" onclick="location.assign('/porto-alegre/eventos')" style="max-width: 80vw; margin: 36px auto; text-align: center; display: block">
@@ -340,6 +156,4 @@
 		</div>
 	<% end %>
 
-	<%# end %>
-	<%# end %>
 </section>
