--- a/web/app/views/feeds/suggestions.html.erb
+++ b/web/app/views/feeds/suggestions.html.erb
@@ -1,13 +1,13 @@
 <section class="me-page  is-animated">
 
-  <%= notice %>
+	<%= notice %>
 
-  <% content_for :meta_title, "Eventos sugeridos para #{current_user.first_name}" %>
+	<% content_for :meta_title, "Eventos sugeridos para #{current_user.first_name}" %>
 
-  <section class="me-section">
-    <section class="me-section__inner">
-      <%= render partial: "components/collection/events/collection", locals: { data: @data, props: {infinite_scroll: true} } %>
-    </section>
-  </section>
+	<section class="me-section">
+		<section class="me-section__inner">
+			<%= render partial: "components/collection/events/collection", locals: {collection: @collection, props: {infinite_scroll: true}} %>
+		</section>
+	</section>
 
 </section>
