--- a/web/app/views/feeds/today.html.erb
+++ b/web/app/views/feeds/today.html.erb
@@ -1,27 +1,28 @@
 <section class="me-page  is-animated">
-  <% content_for :canonical_url, today_events_url %>
-  <% content_for :amp_url, today_events_url(format: :amp) %>
+	<% content_for :canonical_url, today_events_url %>
+	<% content_for :amp_url, today_events_url(format: :amp) %>
 
-  <%= notice %>
+	<%= notice %>
 
-  <% content_for :meta_title, "Eventos em Porto Alegre Hoje (#{I18n.l(Date.today, format: :short)}) e Amanhã (#{I18n.l(Date.tomorrow, format: :short)})" %>
-  <% content_for :meta_description, "Descubra as festas, shows, feiras, teatros, palestras, festivais, exposições e filmes que acontecem hoje dia #{I18n.l(Date.today, format: :long)} e amanhã." %>
+	<% content_for :meta_title, "Eventos em Porto Alegre Hoje (#{I18n.l(Date.today, format: :short)}) e Amanhã (#{I18n.l(Date.tomorrow, format: :short)})" %>
+	<% content_for :meta_description, "Descubra as festas, shows, feiras, teatros, palestras, festivais, exposições e filmes que acontecem hoje dia #{I18n.l(Date.today, format: :long)} e amanhã." %>
 
-  <script type="application/ld+json">
+	<script type="application/ld+json">
   [<%= render partial: 'layouts/json_ld', collection: @collection[:events], as: :event %>]
 
-  </script>
 
-  <section class="me-section">
-    <section class="me-section__inner">
-      <%= render partial: "components/collection/events/collection", locals: { data: @data } %>
-    </section>
-  </section>
+	</script>
+
+	<section class="me-section">
+		<section class="me-section__inner">
+			<%= render partial: "components/collection/events/collection", locals: {collection: @collection} %>
+		</section>
+	</section>
 
 
-  <% unless current_user %>
-    <%= link_to root_path, style: "display: flex" do %>
-      <img class="me-banner" data-gtm="banner-request-invite-footer" loading="lazy" src="<%= image_url 'banners/get-invite-banner' %>" alt="Pegue um convite">
-    <% end %>
-  <% end %>
+	<% unless current_user %>
+		<%= link_to root_path, style: "display: flex" do %>
+			<img class="me-banner" data-gtm="banner-request-invite-footer" loading="lazy" src="<%= image_url 'banners/get-invite-banner' %>" alt="Pegue um convite">
+		<% end %>
+	<% end %>
 </section>
