--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -64,6 +64,7 @@
 
 
 
+
 </script>
 
 <script type="application/ld+json">
@@ -116,10 +117,10 @@
 
 
 
+
 </script>
 
 <section class="me-page me-page--centralized is-animated">
-
 	<div class="me-section me-section--full">
 		<div class="me-section__inner">
 			<div id="event" class="me-event-single me-event-single event-<%= @event.id %>"
@@ -150,7 +151,7 @@
 								 data-save-button-resource-id="<%= @event.id %>"
 								 data-save-button-saved="<%= current_user.taste_events_saved? @event.id %>"
 								 class="me-card__like-button">
-							<button data-target="save-button.saveButton"
+							<button data-target="save-button.button"
 											id="add-to-favorites"
 											class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_user.taste_events_saved?(@event.id) %>"
 											aria-label="Add to favorites"
